@@ -1,5 +1,12 @@
 2017-02-12  Dan Bernstein  <mitz@apple.com>
 
+        Tried to fix USE(APPLE_INTERNAL_SDK) builds after r212211.
+
+        * UIProcess/mac/WebContextMenuProxyMac.mm:
+        (WebKit::WebContextMenuProxyMac::createShareMenuItem): Use non-deprecated method.
+
+2017-02-12  Dan Bernstein  <mitz@apple.com>
+
         [Cocoa] Some -respondsToSelector: checks are unnecessary
         https://bugs.webkit.org/show_bug.cgi?id=168183
 
